Use classpath:// URL for calendar path